# new_admin_panel_sprint_1-1

./: .gitignore  pyproject.toml  setup.cfg
01_schema_design/: movies_database.ddl
02_movies_admin/config/: settings.py
02_movies_admin/config/components/: application.py  internationalization.py
02_movies_admin/movies/: admin.py  models.py
02_movies_admin/movies/locale/en/LC_MESSAGES/: django.po
02_movies_admin/movies/locale/ru/LC_MESSAGES/: django.mo  django.po
02_movies_admin/movies/migrations/: 0001_initial.py
03_sqlite_to_postgres/: config.py  db_tools.py  dc_models.py  load_data.py
tests/check_consistency/: test_main.py
